<resources>
    <string name="app_name">WasteBuddy</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_text">Log In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="guest_prompt_text">Continue as guest.</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="name_hint">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_item_share_text">Share</string>
    <string name="create_item_description_text">Description</string>
    <string name="create_item_image_content_description">Provide an image for this item.</string>
    <string name="create_item_name_text">Name</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_search">Search</string>
    <string name="item_card_image_view_description">Image of item</string>
    <string name="project_image_view_description">Image of project</string>
    <string name="disposal_image_view_description">Disposal method image</string>
    <string name="like_project_image_button_description">Like project image button</string>
    <string name="follow_button_text">Follow</string>
    <string name="unfollow_button_text">Unfollow</string>
    <string name="profile_image_view_description">Profile Image</string>
    <string name="create_project_button_description">Create Project Button</string>
    <string name="create_item_button_description">Create Item Button</string>
    <string name="top_projects_text_view">Top Projects</string>
    <string name="top_items_text_view">Top Items</string>
    <string name="more_projects_text_view">More Projects</string>
    <string name="create_item_barcode_text">Barcode:</string>
    <string name="barcode_scanner_reticle_description">Barcode scanner reticle</string>
    <string name="close_button_description">Close button</string>
    <string name="button_scan_barcode_description">Scan barcode</string>
    <string name="menu_item_camera">Camera</string>
    <string name="menu_item_gallery">Gallery</string>
    <string name="error_404">Error 404</string>
    <string name="difficulty_hard">Hard</string>
    <string name="item_barcode">Item Barcode</string>
    <string name="scan_button_text">Scan</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="barcode_example_text">Ex. 0 12345 56789 0</string>
    <string name="projects_with_item_text">Projects with this item…</string>
    <string name="new_content_save_text">Save</string>
    <string name="new_content_save_item_text">Save Item</string>
    <string name="new_content_save_project_text">Save Project</string>
    <string name="disposal_recycle">Recycle</string>
    <string name="disposal_compost">Compost</string>
    <string name="disposal_landfill">Landfill</string>
    <string name="disposal_special">Special</string>

    <string name="log_out_button_text">Log out</string>
    <string name="add_item_text">Add Item</string>
    <string name="add_button_content_description">Add button with plus sign</string>
    <string name="recent_searches_text">Recent Searches</string>
    <string name="items_used_text">Items Used</string>
    <string name="difficulty_text">Difficulty</string>

    <string-array name="disposal_array">
        <item>Recycle</item>
        <item>Compost</item>
        <item>Landfill</item>
        <item>Special</item>
    </string-array>
</resources>