<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/container_padding"
    tools:context=".fragments.CreateItemFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/container_padding">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/edit_text_margin_horizontal_small"
            android:ems="10"
            android:hint="@string/create_item_name_text"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/barcodeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/edit_text_margin_horizontal_small"
            android:ems="10"
            android:hint="@string/create_item_barcode_text"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/nameEditText"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <Spinner
            android:id="@+id/disposalSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/nameEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/nameEditText"
            app:layout_constraintTop_toBottomOf="@+id/barcodeTextView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/create_item_image_content_description"
            android:padding="@dimen/container_padding"
            android:src="@drawable/ic_round_add_a_photo_64"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/barcodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/container_padding"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_scan_barcode_description"
            android:src="@drawable/ic_barcode_scanner_icon"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/container_padding"
            android:ems="10"
            android:hint="@string/create_item_description_text"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barcodeButton" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/create_item_share_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>